Aplica border-collapse: collapse na tabela além de espaçamento e define largura fixa

--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,9 @@ header {
     margin-top: .5rem;
     margin-left: 1rem;
 }
+
+table {
+    border-collapse: collapse;
+    margin: 1.5rem 2.75rem;
+    width: 1000px;
+}
